# robot_xml

./: A02L-MP4-HT_defeature.xml  csv_to_mjcf.py  pyproject.toml  scene.xml
Scripts/: Rucking.ipynb  model_view.py
meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  link_7.STL  tool_link.STL
robot_arm/: __init__.py  defaults.py
robot_arm/backends/: mujoco_backend.py
robot_arm/core/: __init__.py  interfaces.py  types.py
robot_arm/kinematics/: __init__.py  pin_solver.py
robot_arm/pipeline/: __init__.py  factory.py  motion_service.py
robot_arm/planning/: __init__.py  ruckig_planner.py
urdf/: A02L-MP4-HT_defeature.csv  A02L-MP4-HT_defeature.urdf
